--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^4.1.0",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
+    "follow-redirects": "^1.5.10",
     "mongoose": "^5.3.13",
     "nodemon": "^1.18.7",
     "passport": "^0.4.0",
